fixed the navbar and centering issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,9 @@ a {
     font-size: 10px;
     padding-top: 5%;
 }
+
+@media {
+    .content {
+        text-align: center;
+    }
+}
